--- a/.env.example
+++ b/.env.example
@@ -14,3 +14,7 @@ DB_PORT=3306
 DB_DATABASE=morent
 DB_USERNAME=user
 DB_PASSWORD=1234
+
+SESSION_DRIVER=cookie
+SESSION_DOMAIN=localhost
+SANCTUM_STATEFUL_DOMAINS=localhost:3000,127.0.0.1:3000
